--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -5,8 +5,6 @@ html
     margin: 0
     padding: 0
     height: 100%
-    -ms-overflow-style: none
-    scrollbar-width: none
 
     --su: 16px
 
@@ -47,7 +45,22 @@ html
     --info: var(--color-info)
 
 ::-webkit-scrollbar
-    display: none
+    width: 12px
+    height: 12px
+
+::-webkit-scrollbar-track
+    background: var(--color-background-soft)
+
+::-webkit-scrollbar-thumb
+    background: var(--color-heading)
+    border-radius: 3px
+    background-clip: content-box
+    border: 2px solid transparent
+
+    &:hover
+        background: var(--color-primary-soft)
+        border: 0px solid transparent
+        border-radius: 0
 
 body
     margin: 0
