--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,8 +6,6 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
   --su: 16px;
   --font-heading: "Sofia Pro", sans-serif;
   --font-text: "Proxima Nova", sans-serif;
@@ -41,7 +39,24 @@ html {
 }
 
 ::-webkit-scrollbar {
-  display: none;
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-background-soft);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-heading);
+  border-radius: 3px;
+  background-clip: content-box;
+  border: 2px solid transparent;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-primary-soft);
+  border: 0px solid transparent;
+  border-radius: 0;
 }
 
 body {
