--- a/public/css/app.css
+++ b/public/css/app.css
@@ -180,8 +180,17 @@ select:focus {
   flex: 1;
 }
 
+.divider {
+  border-top: 2px solid rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+
 main {
   width: 100%;
+}
+
+.mui-container.checkbox .label {
+  flex: unset !important;
 }
 
 @media only screen and (max-width: 700px) {
