--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -167,8 +167,18 @@ select
     .spacer
         flex: 1
 
+.divider
+    border-top: 2px solid rgba(0, 0, 0, 0.1)
+    width: 100%
+
 main
     width: 100%
+
+
+
+.mui-container.checkbox
+    .label
+        flex: unset !important
 
 
 
