--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -163,6 +163,9 @@ select
     &.gap
         gap: var(--su)
 
+    &.wrap
+        flex-wrap: wrap
+
     .flex-1,
     .spacer
         flex: 1
@@ -170,6 +173,9 @@ select
 .divider
     border-top: 2px solid rgba(0, 0, 0, 0.1)
     width: 100%
+
+.no-margin
+    margin: 0
 
 main
     width: 100%
