--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -203,3 +203,7 @@ main
 
     h5
         font-size: 1.125rem
+
+@media only screen and (max-width: 500px)
+    html
+        --height-header: 3.5rem
