--- a/public/css/app.css
+++ b/public/css/app.css
@@ -217,5 +217,10 @@ main {
     font-size: 1.125rem;
   }
 }
+@media only screen and (max-width: 500px) {
+  html {
+    --height-header: 3.5rem;
+  }
+}
 
 /*# sourceMappingURL=app.css.map*/
