--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -160,6 +160,15 @@ select
     &.center
         align-items: center
 
+    &.h-center
+        justify-content: center
+    
+    &.v-center
+        align-items: center
+        
+    &.h-end
+        justify-content: flex-end
+
     &.gap
         gap: var(--su)
 
