--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -156,6 +156,9 @@ select
 
 .flex
     display: flex
+
+    &.vertical
+        flex-direction: column
     
     &.center
         align-items: center
