--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -175,12 +175,24 @@ select
     &.gap
         gap: var(--su)
 
+    &.gap-2
+        gap: calc(var(--su) * 2)
+
     &.wrap
         flex-wrap: wrap
 
     .flex-1,
     .spacer
         flex: 1
+
+    .flex-2
+        flex: 2
+
+    .flex-3
+        flex: 3
+
+    .flex-4
+        flex: 4
 
 .divider
     border-top: 2px solid rgba(0, 0, 0, 0.1)
