--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -194,6 +194,19 @@ select
     .flex-4
         flex: 4
 
+.text-green
+    color: var(--color-green)
+
+.text-red
+    color: var(--color-red)
+
+.text-yellow
+    color: var(--color-yellow)
+
+.md-icon
+    font-family: var(--font-icon)
+    line-height: 1
+
 .divider
     border-top: 2px solid rgba(0, 0, 0, 0.1)
     width: 100%
@@ -203,6 +216,20 @@ select
 
 main
     width: 100%
+
+.simple-button
+    color: var(--color-primary)
+    text-transform: uppercase
+    background: none
+    border: none
+    padding: 0
+    font-size: .75rem
+    font-family: inherit
+    cursor: pointer
+    user-select: none
+
+    &:hover
+        color: var(--color-primary-soft)
 
 
 
