--- a/public/css/app.css
+++ b/public/css/app.css
@@ -207,6 +207,23 @@ select:focus {
   flex: 4;
 }
 
+.text-green {
+  color: var(--color-green);
+}
+
+.text-red {
+  color: var(--color-red);
+}
+
+.text-yellow {
+  color: var(--color-yellow);
+}
+
+.md-icon {
+  font-family: var(--font-icon);
+  line-height: 1;
+}
+
 .divider {
   border-top: 2px solid rgba(0, 0, 0, 0.1);
   width: 100%;
@@ -218,6 +235,24 @@ select:focus {
 
 main {
   width: 100%;
+}
+
+.simple-button {
+  color: var(--color-primary);
+  text-transform: uppercase;
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: 0.75rem;
+  font-family: inherit;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.simple-button:hover {
+  color: var(--color-primary-soft);
 }
 
 .mui-container.checkbox .label {
