--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -207,7 +207,9 @@ select
     font-family: var(--font-icon)
     line-height: 1
 
-.divider
+.divider,
+hr
+    border: none
     border-top: 2px solid rgba(0, 0, 0, 0.1)
     width: 100%
 
