--- a/public/css/app.css
+++ b/public/css/app.css
@@ -224,7 +224,9 @@ select:focus {
   line-height: 1;
 }
 
-.divider {
+.divider,
+hr {
+  border: none;
   border-top: 2px solid rgba(0, 0, 0, 0.1);
   width: 100%;
 }
