--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -233,6 +233,21 @@ main
     &:hover
         color: var(--color-primary-soft)
 
+.confirm-popup-wrapper
+    display: flex
+    align-items: center
+    flex-direction: column
+    gap: var(--su)
+    padding: var(--su)
+
+    .confirm-popup-footer
+        display: flex
+        gap: var(--su)
+        width: 100%
+
+        > button
+            flex: 1
+
 
 
 .mui-container.checkbox
