--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -203,6 +203,9 @@ select
 .text-yellow
     color: var(--color-yellow)
 
+.text-align-center
+    text-align: center
+
 .md-icon
     font-family: var(--font-icon)
     line-height: 1
@@ -215,6 +218,8 @@ hr
 
 .no-margin
     margin: 0
+
+
 
 main
     width: 100%
