--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,1074 @@
+.flex {
+  display: flex;
+}
+.flex.vertical {
+  flex-direction: column;
+}
+.flex.gap-0 {
+  gap: 0rem;
+}
+.flex.gap-1 {
+  gap: 1rem;
+}
+.flex.gap-2 {
+  gap: 2rem;
+}
+.flex.gap-3 {
+  gap: 3rem;
+}
+.flex.gap-4 {
+  gap: 4rem;
+}
+.flex.gap-5 {
+  gap: 5rem;
+}
+.flex.gap-6 {
+  gap: 6rem;
+}
+.flex.wrap {
+  flex-wrap: wrap;
+}
+.flex.v-center {
+  align-items: center;
+}
+.flex.h-center {
+  justify-content: center;
+}
+.flex .spacer {
+  flex: 1;
+}
+.flex .flex-1 {
+  flex: 1;
+}
+.flex .flex-2 {
+  flex: 2;
+}
+.flex .flex-3 {
+  flex: 3;
+}
+.flex .flex-4 {
+  flex: 4;
+}
+.flex .flex-5 {
+  flex: 5;
+}
+.flex .flex-6 {
+  flex: 6;
+}
+
+.padding-0 {
+  padding: 0rem;
+}
+
+.padding-1 {
+  padding: 1rem;
+}
+
+.padding-2 {
+  padding: 2rem;
+}
+
+.padding-3 {
+  padding: 3rem;
+}
+
+.padding-4 {
+  padding: 4rem;
+}
+
+.padding-5 {
+  padding: 5rem;
+}
+
+.padding-6 {
+  padding: 6rem;
+}
+
+.padding-inline-0 {
+  padding-inline: 0rem;
+}
+
+.padding-inline-1 {
+  padding-inline: 1rem;
+}
+
+.padding-inline-2 {
+  padding-inline: 2rem;
+}
+
+.padding-inline-3 {
+  padding-inline: 3rem;
+}
+
+.padding-inline-4 {
+  padding-inline: 4rem;
+}
+
+.padding-inline-5 {
+  padding-inline: 5rem;
+}
+
+.padding-inline-6 {
+  padding-inline: 6rem;
+}
+
+.padding-block-0 {
+  padding-block: 0rem;
+}
+
+.padding-block-1 {
+  padding-block: 1rem;
+}
+
+.padding-block-2 {
+  padding-block: 2rem;
+}
+
+.padding-block-3 {
+  padding-block: 3rem;
+}
+
+.padding-block-4 {
+  padding-block: 4rem;
+}
+
+.padding-block-5 {
+  padding-block: 5rem;
+}
+
+.padding-block-6 {
+  padding-block: 6rem;
+}
+
+.padding-top-0 {
+  padding-top: 0rem;
+}
+
+.padding-top-1 {
+  padding-top: 1rem;
+}
+
+.padding-top-2 {
+  padding-top: 2rem;
+}
+
+.padding-top-3 {
+  padding-top: 3rem;
+}
+
+.padding-top-4 {
+  padding-top: 4rem;
+}
+
+.padding-top-5 {
+  padding-top: 5rem;
+}
+
+.padding-top-6 {
+  padding-top: 6rem;
+}
+
+.padding-right-0 {
+  padding-right: 0rem;
+}
+
+.padding-right-1 {
+  padding-right: 1rem;
+}
+
+.padding-right-2 {
+  padding-right: 2rem;
+}
+
+.padding-right-3 {
+  padding-right: 3rem;
+}
+
+.padding-right-4 {
+  padding-right: 4rem;
+}
+
+.padding-right-5 {
+  padding-right: 5rem;
+}
+
+.padding-right-6 {
+  padding-right: 6rem;
+}
+
+.padding-bottom-0 {
+  padding-bottom: 0rem;
+}
+
+.padding-bottom-1 {
+  padding-bottom: 1rem;
+}
+
+.padding-bottom-2 {
+  padding-bottom: 2rem;
+}
+
+.padding-bottom-3 {
+  padding-bottom: 3rem;
+}
+
+.padding-bottom-4 {
+  padding-bottom: 4rem;
+}
+
+.padding-bottom-5 {
+  padding-bottom: 5rem;
+}
+
+.padding-bottom-6 {
+  padding-bottom: 6rem;
+}
+
+.padding-left-0 {
+  padding-left: 0rem;
+}
+
+.padding-left-1 {
+  padding-left: 1rem;
+}
+
+.padding-left-2 {
+  padding-left: 2rem;
+}
+
+.padding-left-3 {
+  padding-left: 3rem;
+}
+
+.padding-left-4 {
+  padding-left: 4rem;
+}
+
+.padding-left-5 {
+  padding-left: 5rem;
+}
+
+.padding-left-6 {
+  padding-left: 6rem;
+}
+
+.margin-0 {
+  margin: 0rem;
+}
+
+.margin-1 {
+  margin: 1rem;
+}
+
+.margin-2 {
+  margin: 2rem;
+}
+
+.margin-3 {
+  margin: 3rem;
+}
+
+.margin-4 {
+  margin: 4rem;
+}
+
+.margin-5 {
+  margin: 5rem;
+}
+
+.margin-6 {
+  margin: 6rem;
+}
+
+.margin-inline-0 {
+  margin-inline: 0rem;
+}
+
+.margin-inline-1 {
+  margin-inline: 1rem;
+}
+
+.margin-inline-2 {
+  margin-inline: 2rem;
+}
+
+.margin-inline-3 {
+  margin-inline: 3rem;
+}
+
+.margin-inline-4 {
+  margin-inline: 4rem;
+}
+
+.margin-inline-5 {
+  margin-inline: 5rem;
+}
+
+.margin-inline-6 {
+  margin-inline: 6rem;
+}
+
+.margin-block-0 {
+  margin-block: 0rem;
+}
+
+.margin-block-1 {
+  margin-block: 1rem;
+}
+
+.margin-block-2 {
+  margin-block: 2rem;
+}
+
+.margin-block-3 {
+  margin-block: 3rem;
+}
+
+.margin-block-4 {
+  margin-block: 4rem;
+}
+
+.margin-block-5 {
+  margin-block: 5rem;
+}
+
+.margin-block-6 {
+  margin-block: 6rem;
+}
+
+.margin-top-0 {
+  margin-top: 0rem;
+}
+
+.margin-top-1 {
+  margin-top: 1rem;
+}
+
+.margin-top-2 {
+  margin-top: 2rem;
+}
+
+.margin-top-3 {
+  margin-top: 3rem;
+}
+
+.margin-top-4 {
+  margin-top: 4rem;
+}
+
+.margin-top-5 {
+  margin-top: 5rem;
+}
+
+.margin-top-6 {
+  margin-top: 6rem;
+}
+
+.margin-right-0 {
+  margin-right: 0rem;
+}
+
+.margin-right-1 {
+  margin-right: 1rem;
+}
+
+.margin-right-2 {
+  margin-right: 2rem;
+}
+
+.margin-right-3 {
+  margin-right: 3rem;
+}
+
+.margin-right-4 {
+  margin-right: 4rem;
+}
+
+.margin-right-5 {
+  margin-right: 5rem;
+}
+
+.margin-right-6 {
+  margin-right: 6rem;
+}
+
+.margin-bottom-0 {
+  margin-bottom: 0rem;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-2 {
+  margin-bottom: 2rem;
+}
+
+.margin-bottom-3 {
+  margin-bottom: 3rem;
+}
+
+.margin-bottom-4 {
+  margin-bottom: 4rem;
+}
+
+.margin-bottom-5 {
+  margin-bottom: 5rem;
+}
+
+.margin-bottom-6 {
+  margin-bottom: 6rem;
+}
+
+.margin-left-0 {
+  margin-left: 0rem;
+}
+
+.margin-left-1 {
+  margin-left: 1rem;
+}
+
+.margin-left-2 {
+  margin-left: 2rem;
+}
+
+.margin-left-3 {
+  margin-left: 3rem;
+}
+
+.margin-left-4 {
+  margin-left: 4rem;
+}
+
+.margin-left-5 {
+  margin-left: 5rem;
+}
+
+.margin-left-6 {
+  margin-left: 6rem;
+}
+
+.h-0 {
+  height: 0rem;
+}
+
+.w-0 {
+  width: 0rem;
+}
+
+.min-h-0 {
+  min-height: 0rem;
+}
+
+.h-1 {
+  height: 1rem;
+}
+
+.w-1 {
+  width: 1rem;
+}
+
+.min-h-1 {
+  min-height: 1rem;
+}
+
+.h-2 {
+  height: 2rem;
+}
+
+.w-2 {
+  width: 2rem;
+}
+
+.min-h-2 {
+  min-height: 2rem;
+}
+
+.h-3 {
+  height: 3rem;
+}
+
+.w-3 {
+  width: 3rem;
+}
+
+.min-h-3 {
+  min-height: 3rem;
+}
+
+.h-4 {
+  height: 4rem;
+}
+
+.w-4 {
+  width: 4rem;
+}
+
+.min-h-4 {
+  min-height: 4rem;
+}
+
+.h-5 {
+  height: 5rem;
+}
+
+.w-5 {
+  width: 5rem;
+}
+
+.min-h-5 {
+  min-height: 5rem;
+}
+
+.h-6 {
+  height: 6rem;
+}
+
+.w-6 {
+  width: 6rem;
+}
+
+.min-h-6 {
+  min-height: 6rem;
+}
+
+.h-7 {
+  height: 7rem;
+}
+
+.w-7 {
+  width: 7rem;
+}
+
+.min-h-7 {
+  min-height: 7rem;
+}
+
+.h-8 {
+  height: 8rem;
+}
+
+.w-8 {
+  width: 8rem;
+}
+
+.min-h-8 {
+  min-height: 8rem;
+}
+
+.h-9 {
+  height: 9rem;
+}
+
+.w-9 {
+  width: 9rem;
+}
+
+.min-h-9 {
+  min-height: 9rem;
+}
+
+.h-10 {
+  height: 10rem;
+}
+
+.w-10 {
+  width: 10rem;
+}
+
+.min-h-10 {
+  min-height: 10rem;
+}
+
+.h-11 {
+  height: 11rem;
+}
+
+.w-11 {
+  width: 11rem;
+}
+
+.min-h-11 {
+  min-height: 11rem;
+}
+
+.h-12 {
+  height: 12rem;
+}
+
+.w-12 {
+  width: 12rem;
+}
+
+.min-h-12 {
+  min-height: 12rem;
+}
+
+.h-13 {
+  height: 13rem;
+}
+
+.w-13 {
+  width: 13rem;
+}
+
+.min-h-13 {
+  min-height: 13rem;
+}
+
+.h-14 {
+  height: 14rem;
+}
+
+.w-14 {
+  width: 14rem;
+}
+
+.min-h-14 {
+  min-height: 14rem;
+}
+
+.h-15 {
+  height: 15rem;
+}
+
+.w-15 {
+  width: 15rem;
+}
+
+.min-h-15 {
+  min-height: 15rem;
+}
+
+.h-16 {
+  height: 16rem;
+}
+
+.w-16 {
+  width: 16rem;
+}
+
+.min-h-16 {
+  min-height: 16rem;
+}
+
+.h-17 {
+  height: 17rem;
+}
+
+.w-17 {
+  width: 17rem;
+}
+
+.min-h-17 {
+  min-height: 17rem;
+}
+
+.h-18 {
+  height: 18rem;
+}
+
+.w-18 {
+  width: 18rem;
+}
+
+.min-h-18 {
+  min-height: 18rem;
+}
+
+.h-19 {
+  height: 19rem;
+}
+
+.w-19 {
+  width: 19rem;
+}
+
+.min-h-19 {
+  min-height: 19rem;
+}
+
+.h-20 {
+  height: 20rem;
+}
+
+.w-20 {
+  width: 20rem;
+}
+
+.min-h-20 {
+  min-height: 20rem;
+}
+
+.h-21 {
+  height: 21rem;
+}
+
+.w-21 {
+  width: 21rem;
+}
+
+.min-h-21 {
+  min-height: 21rem;
+}
+
+.h-22 {
+  height: 22rem;
+}
+
+.w-22 {
+  width: 22rem;
+}
+
+.min-h-22 {
+  min-height: 22rem;
+}
+
+.h-23 {
+  height: 23rem;
+}
+
+.w-23 {
+  width: 23rem;
+}
+
+.min-h-23 {
+  min-height: 23rem;
+}
+
+.h-24 {
+  height: 24rem;
+}
+
+.w-24 {
+  width: 24rem;
+}
+
+.min-h-24 {
+  min-height: 24rem;
+}
+
+.h-25 {
+  height: 25rem;
+}
+
+.w-25 {
+  width: 25rem;
+}
+
+.min-h-25 {
+  min-height: 25rem;
+}
+
+.h-26 {
+  height: 26rem;
+}
+
+.w-26 {
+  width: 26rem;
+}
+
+.min-h-26 {
+  min-height: 26rem;
+}
+
+.h-27 {
+  height: 27rem;
+}
+
+.w-27 {
+  width: 27rem;
+}
+
+.min-h-27 {
+  min-height: 27rem;
+}
+
+.h-28 {
+  height: 28rem;
+}
+
+.w-28 {
+  width: 28rem;
+}
+
+.min-h-28 {
+  min-height: 28rem;
+}
+
+.h-29 {
+  height: 29rem;
+}
+
+.w-29 {
+  width: 29rem;
+}
+
+.min-h-29 {
+  min-height: 29rem;
+}
+
+.h-30 {
+  height: 30rem;
+}
+
+.w-30 {
+  width: 30rem;
+}
+
+.min-h-30 {
+  min-height: 30rem;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
+.text-align-left {
+  text-align: left;
+}
+
+.font-icon,
+.md-icon {
+  font-family: var(--font-icon);
+  text-transform: lowercase;
+  font-style: normal;
+  font-weight: normal;
+}
+
+.font-text {
+  font-family: var(--font-text);
+}
+
+.font-heading {
+  font-family: var(--font-heading);
+}
+
+.color-primary {
+  color: var(--color-primary);
+}
+
+.color-heading {
+  color: var(--color-heading);
+}
+
+.color-text {
+  color: var(--color-text);
+}
+
+.color-red {
+  color: var(--color-red);
+}
+
+.color-green {
+  color: var(--color-green);
+}
+
+.background {
+  background: var(--color-background);
+}
+
+.background-soft {
+  background: var(--color-background-soft);
+}
+
+.border {
+  border: 1px solid var(--color-border);
+}
+
+.border-soft {
+  border: 1px solid var(--color-background-soft);
+}
+
+.border-primary {
+  border: 1px solid var(--color-primary);
+}
+
+.border-inline {
+  border-inline: 1px solid var(--color-border);
+}
+
+.border-inline-soft {
+  border-inline: 1px solid var(--color-background-soft);
+}
+
+.border-inline-primary {
+  border-inline: 1px solid var(--color-primary);
+}
+
+.border-block {
+  border-block: 1px solid var(--color-border);
+}
+
+.border-block-soft {
+  border-block: 1px solid var(--color-background-soft);
+}
+
+.border-block-primary {
+  border-block: 1px solid var(--color-primary);
+}
+
+.border-top {
+  border-top: 1px solid var(--color-border);
+}
+
+.border-top-soft {
+  border-top: 1px solid var(--color-background-soft);
+}
+
+.border-top-primary {
+  border-top: 1px solid var(--color-primary);
+}
+
+.border-right {
+  border-right: 1px solid var(--color-border);
+}
+
+.border-right-soft {
+  border-right: 1px solid var(--color-background-soft);
+}
+
+.border-right-primary {
+  border-right: 1px solid var(--color-primary);
+}
+
+.border-bottom {
+  border-bottom: 1px solid var(--color-border);
+}
+
+.border-bottom-soft {
+  border-bottom: 1px solid var(--color-background-soft);
+}
+
+.border-bottom-primary {
+  border-bottom: 1px solid var(--color-primary);
+}
+
+.border-left {
+  border-left: 1px solid var(--color-border);
+}
+
+.border-left-soft {
+  border-left: 1px solid var(--color-background-soft);
+}
+
+.border-left-primary {
+  border-left: 1px solid var(--color-primary);
+}
+
+.radius-s {
+  border-radius: var(--radius-s);
+}
+
+.radius-top-s {
+  border-top-left-radius: var(--radius-s);
+  border-top-right-radius: var(--radius-s);
+}
+
+.radius-right-s {
+  border-top-right-radius: var(--radius-s);
+  border-bottom-right-radius: var(--radius-s);
+}
+
+.radius-bottom-s {
+  border-bottom-right-radius: var(--radius-s);
+  border-bottom-left-radius: var(--radius-s);
+}
+
+.radius-left-s {
+  border-bottom-left-radius: var(--radius-s);
+  border-top-left-radius: var(--radius-s);
+}
+
+.radius-m {
+  border-radius: var(--radius-m);
+}
+
+.radius-top-m {
+  border-top-left-radius: var(--radius-m);
+  border-top-right-radius: var(--radius-m);
+}
+
+.radius-right-m {
+  border-top-right-radius: var(--radius-m);
+  border-bottom-right-radius: var(--radius-m);
+}
+
+.radius-bottom-m {
+  border-bottom-right-radius: var(--radius-m);
+  border-bottom-left-radius: var(--radius-m);
+}
+
+.radius-left-m {
+  border-bottom-left-radius: var(--radius-m);
+  border-top-left-radius: var(--radius-m);
+}
+
+.radius-l {
+  border-radius: var(--radius-l);
+}
+
+.radius-top-l {
+  border-top-left-radius: var(--radius-l);
+  border-top-right-radius: var(--radius-l);
+}
+
+.radius-right-l {
+  border-top-right-radius: var(--radius-l);
+  border-bottom-right-radius: var(--radius-l);
+}
+
+.radius-bottom-l {
+  border-bottom-right-radius: var(--radius-l);
+  border-bottom-left-radius: var(--radius-l);
+}
+
+.radius-left-l {
+  border-bottom-left-radius: var(--radius-l);
+  border-top-left-radius: var(--radius-l);
+}
+
+.radius-xl {
+  border-radius: var(--radius-xl);
+}
+
+.radius-top-xl {
+  border-top-left-radius: var(--radius-xl);
+  border-top-right-radius: var(--radius-xl);
+}
+
+.radius-right-xl {
+  border-top-right-radius: var(--radius-xl);
+  border-bottom-right-radius: var(--radius-xl);
+}
+
+.radius-bottom-xl {
+  border-bottom-right-radius: var(--radius-xl);
+  border-bottom-left-radius: var(--radius-xl);
+}
+
+.radius-left-xl {
+  border-bottom-left-radius: var(--radius-xl);
+  border-top-left-radius: var(--radius-xl);
+}
+
+.radius-circle {
+  border-radius: 50%;
+}
+
+.profile-image {
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -30,7 +1101,7 @@ html {
   --shadow-elevation-medium: 0px 1px 1.5px hsl(var(--shadow-color) / 0), 0px 3.9px 5.9px hsl(var(--shadow-color) / 0.03), 0px 7.5px 11.3px hsl(var(--shadow-color) / 0.05), 0px 15px 22.5px hsl(var(--shadow-color) / 0.08);
   --shadow-elevation-high: 0px 1px 1.5px hsl(var(--shadow-color) / 0), 0px 5.6px 8.4px hsl(var(--shadow-color) / 0.01), 0px 9.6px 14.4px hsl(var(--shadow-color) / 0.02), 0px 13.9px 20.9px hsl(var(--shadow-color) / 0.04), 0px 19.1px 28.7px hsl(var(--shadow-color) / 0.05), 0px 26.4px 39.6px hsl(var(--shadow-color) / 0.06), 0px 36.4px 54.6px hsl(var(--shadow-color) / 0.07), 0px 50px 75px hsl(var(--shadow-color) / 0.09);
   --mui-icon-font: var(--font-icon);
-  --mui-background: var(--color-background);
+  --mui-background: var(--color-background-soft);
   --primary: var(--color-primary);
   --error: var(--color-error);
   --warning: var(--color-warning);
@@ -221,11 +1292,6 @@ select:focus {
 
 .text-align-center {
   text-align: center;
-}
-
-.md-icon {
-  font-family: var(--font-icon);
-  line-height: 1;
 }
 
 .divider,
