--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -1,3 +1,5 @@
+@import './utils.sass'
+    
 *
     box-sizing: border-box
 
@@ -37,7 +39,7 @@ html
     --shadow-elevation-high: 0px 1px 1.5px hsl(var(--shadow-color) / 0), 0px 5.6px 8.4px hsl(var(--shadow-color) / 0.01), 0px 9.6px 14.4px hsl(var(--shadow-color) / 0.02), 0px 13.9px 20.9px hsl(var(--shadow-color) / 0.04), 0px 19.1px 28.7px hsl(var(--shadow-color) / 0.05), 0px 26.4px 39.6px hsl(var(--shadow-color) / 0.06), 0px 36.4px 54.6px hsl(var(--shadow-color) / 0.07), 0px 50px 75px hsl(var(--shadow-color) / 0.09)
 
     --mui-icon-font: var(--font-icon)
-    --mui-background: var(--color-background)
+    --mui-background: var(--color-background-soft)
     --primary: var(--color-primary)
     --error: var(--color-error)
     --warning: var(--color-warning)
@@ -205,10 +207,6 @@ select
 
 .text-align-center
     text-align: center
-
-.md-icon
-    font-family: var(--font-icon)
-    line-height: 1
 
 .divider,
 hr
