--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -137,14 +137,11 @@ a
 select
     height: 3rem
     padding: 0 .6rem
-    border: 1px solid #888
+    border: none
     background: var(--mui-background)
     border-radius: .325rem
     font-family: var(--font-text)
     font-size: 1rem
-
-    &:focus
-        border-color: #222
 
 .limiter
     width: 100%
