--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -10,6 +10,11 @@ html
 
     --su: 16px
 
+    --radius-s: 4px
+    --radius-m: 8px
+    --radius-l: 12px
+    --radius-xl: 16px
+
     --font-heading: 'Sofia Pro', sans-serif
     --font-text: 'Proxima Nova', sans-serif
     --font-icon: 'Material Symbols Rounded'
