--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -139,7 +139,8 @@ a
     &:hover
         color: var(--color-primary-soft)
 
-select
+select,
+input[type="date"]
     height: 3rem
     padding: 0 .6rem
     border: none
