+ self host fonts

--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -1,4 +1,7 @@
 @import './utils.sass'
+@import './fonts/proxima-nova.scss'
+@import './fonts/sofia-pro.scss'
+@import './fonts/material-symbols-rounded.scss'
     
 *
     box-sizing: border-box
@@ -254,11 +257,14 @@ main
         > button
             flex: 1
 
-
-
 .mui-container.checkbox
     .label
         flex: unset !important
+
+#uc-privacy-button
+    #fingerprint,
+    #background use
+        fill: var(--color-primary)
 
 
 
