--- a/resources/css/utils.sass
+++ b/resources/css/utils.sass
@@ -30,6 +30,9 @@
             .#{$prop}#{$modifier}-#{$i}
                 #{$prop}#{$modifier}: #{$i}rem
 
+        .#{$prop}#{$modifier}-auto
+            #{$prop}#{$modifier}: auto
+
 @for $i from 0 through 30
     .h-#{$i}
         height: #{$i}rem
