~ better post editor popup

--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -28,6 +28,7 @@ html
     --color-text: #686f6f
     --color-background: #ffffff
     --color-background-soft: #eeeeee
+    --color-border: #ccc
 
     --color-blue: #00a0e9
     --color-red: #ff305d
@@ -48,6 +49,7 @@ html
 
     --mui-icon-font: var(--font-icon)
     --mui-background: var(--color-background-soft)
+    --mui-border-color: var(--color-border)
     --primary: var(--color-primary)
     --error: var(--color-error)
     --warning: var(--color-warning)
