~ misc media stuff

--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -1,5 +1,6 @@
 @import './utils.sass'
 @import './fonts/proxima-nova.scss'
+@import './fonts/inter.scss'
 @import './fonts/sofia-pro.scss'
 @import './fonts/material-symbols-rounded.scss'
     
@@ -20,6 +21,7 @@ html
 
     --font-heading: 'Sofia Pro', sans-serif
     --font-text: 'Proxima Nova', sans-serif
+    --font-interface: 'Inter', sans-serif
     --font-icon: 'Material Symbols Rounded'
 
     --color-primary: #e00047
