--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -270,6 +270,22 @@ main
     #background use
         fill: var(--color-primary)
 
+.fab-button
+    height: 4rem
+    width: 4rem
+    border: none
+    background: var(--color-primary)
+    border-radius: 50%
+    box-shadow: var(--shadow-elevation-medium)
+    display: flex
+    align-items: center
+    justify-content: center
+    cursor: pointer
+    user-select: none
+    font-family: var(--font-icon)
+    font-size: 2rem
+    color: white
+
 
 
 @media only screen and (max-width: 700px)
