--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -1,4 +1,5 @@
 @import './utils.sass'
+@import './content.sass'
 @import './fonts/proxima-nova.scss'
 @import './fonts/inter.scss'
 @import './fonts/sofia-pro.scss'
@@ -223,6 +224,11 @@ hr
     border: none
     border-top: 2px solid rgba(0, 0, 0, 0.1)
     width: 100%
+
+    &.vertical
+        border: none
+        border-left: 2px solid rgba(0, 0, 0, 0.1)
+        height: 100%
 
 .no-margin
     margin: 0
