--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -87,6 +87,14 @@ body
     line-height: 1.75
     color: var(--color-text)
 
+#cookie-settings-button
+    position: fixed
+    bottom: 1rem
+    right: 1rem
+    opacity: 0
+    pointer-events: none
+    user-select: none
+
 h1,
 h2,
 h3,
