--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -37,6 +37,9 @@
         margin-block: 1em
         padding-block: 1px
 
+    li > p
+        margin-block: 0
+
     blockquote.content-blockquote
         background: var(--color-background-soft)
         border-radius: var(--radius-m)
