--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -185,6 +185,15 @@ input[type="date"]
     &.text-limiter
         max-width: 700px
 
+
+
+.v-popper--theme-tooltip
+    .v-popper__wrapper
+        .v-popper__inner
+            background: #000000cc
+            backdrop-filter: blur(10px)
+
+
 .flex
     display: flex
 
@@ -288,11 +297,6 @@ main
 .mui-container.checkbox
     .label
         flex: unset !important
-
-#uc-privacy-button
-    #fingerprint,
-    #background use
-        fill: var(--color-primary)
 
 .fab-button
     height: 4rem
