--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -44,6 +44,19 @@ html
     --color-warning: var(--color-yellow)
     --color-error: var(--color-red)
 
+    --color-app-pages: #ffa502
+    --color-app-pages-on-dark: #fed330
+    --color-app-blog: #3742fa
+    --color-app-blog-on-dark: #1e90ff
+    --color-app-wiki: #ff6348
+    --color-app-wiki-on-dark: #ff7f50
+    --color-app-intranet: #8854d0
+    --color-app-intranet-on-dark: #a55eea
+    --color-app-jobs: #ff4757
+    --color-app-jobs-on-dark: #ff6b81
+    --color-app-marketing: #20bf6b
+    --color-app-marketing-on-dark: #26de81
+
     --height-header: 4.5rem
 
     --shadow-color: 0deg 0% 0%
