--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -1,4 +1,91 @@
 .formatted-content
+    table
+        border-spacing: 0
+        // table-layout: fixed
+        width: 100%
+        margin: 1rem 0
+        overflow: hidden
+        overflow-x: auto
+
+        tr:first-child
+            > td:first-child,
+            > th:first-child
+                border-top-left-radius: var(--radius-m)
+
+            > td:last-child,
+            > th:last-child
+                border-top-right-radius: var(--radius-m)
+
+        tr:last-child
+            td, th
+                border-bottom: 1px solid var(--color-border)
+
+            > td:first-child,
+            > th:first-child
+                border-bottom-left-radius: var(--radius-m)
+
+            > td:last-child,
+            > th:last-child
+                border-bottom-right-radius: var(--radius-m)
+
+        td,
+        th
+            min-width: 1rem
+            border-top: 1px solid var(--color-border)
+            border-left: 1px solid var(--color-border)
+            padding: .5rem
+            vertical-align: top
+            box-sizing: border-box
+            position: relative
+
+            &:last-child
+                border-right: 1px solid var(--color-border)
+
+            > *
+                margin-bottom: 0
+
+            > *:last-child
+                margin-bottom: 0
+
+            > *:first-child
+                margin-top: 0
+
+        th
+            font-weight: bold
+            text-align: left
+            background-color: #f1f3f5
+
+        .selectedCell::after
+            z-index: 2
+            position: absolute
+            content: ""
+            left: 0
+            right: 0
+            top: 0
+            bottom: 0
+            background: rgba(200, 200, 255, 0.4)
+            pointer-events: none
+
+        .column-resize-handle
+            position: absolute
+            right: -2px
+            top: 0
+            bottom: -2px
+            width: 4px
+            background-color: #adf
+            pointer-events: none
+
+        p
+            margin: 0
+
+    .tableWrapper
+        padding: 1rem 0
+        overflow-x: auto
+
+    .resize-cursor
+        cursor: ew-resize
+        cursor: col-resize
+
     img.content-image
         object-fit: cover
         object-position: center
