--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -44,10 +44,12 @@ html
     --color-warning: var(--color-yellow)
     --color-error: var(--color-red)
 
-    --color-app-pages-on-light: #3742fa
+    --color-app-pages-on-light: #376bfa
     --color-app-pages-on-dark: #1e90ff
     --color-app-blog-on-light: #8854d0
     --color-app-blog-on-dark: #a55eea
+    --color-app-forms-on-light: #e84393
+    --color-app-forms-on-dark: #f368e0
     --color-app-ecommerce-on-light: #ff4757
     --color-app-ecommerce-on-dark: #ff6b81
     --color-app-jobs-on-light: #ff6348
