--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -176,3 +176,12 @@
             opacity: .2
             pointer-events: none
             line-height: 1
+
+
+
+    &.frontend-forms-root
+        p:first-child
+            margin-top: 0
+
+        p:last-child
+            margin-bottom: 0
