~ misc ~ kontakt durchwahlen ~ text-editor ~ typo fix on admin dashboard

--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -127,6 +127,14 @@
     li > p
         margin-block: 0
 
+    hr
+        margin-block: 1em
+        border: 0
+        border-top: 1px solid var(--color-border)
+
+        &.ProseMirror-selectednode
+            border-color: var(--color-info)
+
     .key-fact
         border-radius: var(--radius-m)
         background: var(--color-background-soft)
