~ admin side nav

--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -45,21 +45,21 @@ html
     --color-error: var(--color-red)
 
     --color-app-pages-on-light: #376bfa
-    --color-app-pages-on-dark: #1e90ff
+    --color-app-pages-on-dark: #3c9fff
     --color-app-blog-on-light: #8854d0
-    --color-app-blog-on-dark: #a55eea
+    --color-app-blog-on-dark: #c07fff
     --color-app-forms-on-light: #e84393
     --color-app-forms-on-dark: #f368e0
     --color-app-ecommerce-on-light: #ff4757
     --color-app-ecommerce-on-dark: #ff6b81
     --color-app-jobs-on-light: #ff6348
-    --color-app-jobs-on-dark: #ff7f50
+    --color-app-jobs-on-dark: #ff8d64
     --color-app-intranet-on-light: #ffa502
     --color-app-intranet-on-dark: #fed330
     --color-app-wiki-on-light: #20bf6b
     --color-app-wiki-on-dark: #26de81
     --color-app-marketing-on-light: #079992
-    --color-app-marketing-on-dark: #38ada9
+    --color-app-marketing-on-dark: #4cceca
 
     --height-header: 4.5rem
 
