--- a/resources/css/utils.sass
+++ b/resources/css/utils.sass
@@ -8,6 +8,15 @@
         &.gap-#{$i}
             gap: #{$i}rem
 
+    &.gap-0-5
+        gap: 0.5rem
+
+    &.gap-1-5
+        gap: 1.5rem
+
+    &.gap-2-5
+        gap: 2.5rem
+
     &.wrap
         flex-wrap: wrap
 
