--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -211,6 +211,21 @@ input[type="date"]
     font-family: var(--font-text)
     font-size: 1rem
 
+input[type="color"]
+    height: 2rem
+    width: 3.5rem
+    border: none
+    padding: 0
+    margin: 0
+    -webkit-appearance: none
+
+    &::-webkit-color-swatch-wrapper
+        padding: 0
+
+    &::-webkit-color-swatch
+        border-radius: var(--radius-s)
+        border: 1px solid white
+
 .limiter
     width: 100%
     max-width: 1300px
