--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -186,6 +186,67 @@
             line-height: 1
 
 
+    pre
+        background: var(--color-heading)
+        color: var(--color-background)
+        font-family: 'JetBrainsMono', monospace
+        padding: 0.75rem 1rem
+        line-height: 1.4
+        border-radius: var(--radius-m)
+
+        code
+            color: inherit
+            padding: 0
+            background: none
+            font-size: .8rem
+            border-radius: 0
+            line-height: inherit
+
+        .hljs-comment,
+        .hljs-quote
+            color: #868686
+
+        .hljs-variable,
+        .hljs-template-variable,
+        .hljs-attribute,
+        .hljs-tag,
+        .hljs-name,
+        .hljs-regexp,
+        .hljs-link,
+        .hljs-name,
+        .hljs-selector-id,
+        .hljs-selector-class
+            color: #F98181
+
+        .hljs-number,
+        .hljs-meta,
+        .hljs-built_in,
+        .hljs-builtin-name,
+        .hljs-literal,
+        .hljs-type,
+        .hljs-params
+            color: #FBBC88
+
+        .hljs-string,
+        .hljs-symbol,
+        .hljs-bullet
+            color: #B9F18D
+
+        .hljs-title,
+        .hljs-section
+            color: #FAF594
+
+        .hljs-keyword,
+        .hljs-selector-tag
+            color: #70CFF8
+
+        .hljs-emphasis
+            font-style: italic
+
+        .hljs-strong
+            font-weight: 700
+
+
 
     &.frontend-forms-root
         p:first-child
