~ admin navigation + misc

--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -207,7 +207,7 @@ input[type="date"]
     padding: 0 .6rem
     border: none
     background: var(--mui-background)
-    border-radius: .325rem
+    border-radius: var(--radius-m)
     font-family: var(--font-text)
     font-size: 1rem
 
@@ -235,6 +235,9 @@ input[type="color"]
 
     &.text-limiter
         max-width: 700px
+
+.mui-button.mui-container
+    border-radius: var(--radius-m) !important
 
 
 
