--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -28,7 +28,7 @@ html
 
     --color-primary: #e00047
     --color-primary-soft: #fc286b
-    --color-heading: #393f3f
+    --color-heading: #364040
     --color-text: #686f6f
     --color-background: #ffffff
     --color-background-soft: #eeeeee
