--- a/resources/css/utils.sass
+++ b/resources/css/utils.sass
@@ -115,6 +115,11 @@
 
 
 
+.user-select-none
+    user-select: none
+
+
+
 .font-icon,
 .md-icon
     font-family: var(--font-icon)
@@ -140,10 +145,10 @@
     color: var(--color-primary-soft)
 
 .color-heading
-    color: var(--color-heading)
+    color: var(--color-text)
 
 .color-text
-    color: var(--color-text)
+    color: var(--color-text-soft)
 
 .color-red
     color: var(--color-red)
