--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -177,7 +177,7 @@
             position: absolute
             top: 5px
             left: 5px
-            color: var(--color-text)
+            color: var(--color-text-soft)
             font-family: var(--font-icon)
             font-size: 3em
             user-select: none
@@ -187,7 +187,7 @@
 
 
     pre
-        background: var(--color-heading)
+        background: var(--color-text)
         color: var(--color-background)
         font-family: 'JetBrainsMono', monospace
         padding: 0.75rem 1rem
