--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -13,6 +13,7 @@ html
     padding: 0
     height: 100%
     overflow-y: scroll
+    scroll-behavior: smooth
 
     --radius-s: 4px
     --radius-m: 8px
