~ intranet layout changes

--- a/resources/css/utils.sass
+++ b/resources/css/utils.sass
@@ -4,7 +4,7 @@
     &.vertical
         flex-direction: column
 
-    @for $i from 0 through 6
+    @for $i from 0 through 30
         &.gap-#{$i}
             gap: #{$i}rem
 
@@ -155,6 +155,12 @@
 
 .color-green
     color: var(--color-green)
+
+.color-blue
+    color: var(--color-blue)
+
+.color-yellow
+    color: var(--color-yellow)
 
 
 
