--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -258,6 +258,12 @@ input[type="color"]
 
 
 
+// IODINE Select FIX
+.select-dropdown-wrapper .select-dropdown-item
+    position: relative
+
+
+
 .v-popper--theme-tooltip
     .v-popper__wrapper
         .v-popper__inner
