--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -262,6 +262,9 @@ input[type="color"]
 .select-dropdown-wrapper .select-dropdown-item
     position: relative
 
+.iod-container.iod-toggle .label
+    flex: unset !important
+
 
 
 .v-popper--theme-tooltip
