--- a/resources/css/utils.sass
+++ b/resources/css/utils.sass
@@ -213,3 +213,11 @@
     aspect-ratio: 1/1
     object-fit: cover
     object-position: center
+
+
+
+.object-fit-cover
+    object-fit: cover
+
+.object-fit-contain
+    object-fit: contain
