+ extra data for user

--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -296,7 +296,7 @@ hr
     &.vertical
         border: none
         border-left: 1px solid var(--color-border)
-        height: 100%
+        width: unset
 
 .no-margin
     margin: 0
