~ stat ui tweaks

--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -23,6 +23,7 @@ html
     --font-heading: 'Sofia Pro', sans-serif
     --font-text: 'Proxima Nova', sans-serif
     --font-interface: 'Inter', sans-serif
+    --font-mono: 'JetBrains Mono', monospace
     --font-icon: 'Material Symbols Rounded'
 
     --height-header: 4.5rem
