~ text editor component

--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -28,11 +28,16 @@
     .table-wrapper table
         margin: 0
 
+    .tableWrapper
+        padding: 0
+        margin: 1rem 0
+        overflow-x: auto
+
     table
         border-spacing: 0
         table-layout: fixed
         width: 100%
-        margin: 1rem 0
+        margin: 0
 
         tr:first-child
             > td:first-child,
@@ -104,10 +109,6 @@
 
         p
             margin: 0
-
-    .tableWrapper
-        padding: 1rem 0
-        overflow-x: auto
 
     .resize-cursor
         cursor: ew-resize
