--- a/resources/css/content.sass
+++ b/resources/css/content.sass
@@ -32,6 +32,7 @@
         padding: 0
         margin: 1rem 0
         overflow-x: auto
+        overflow-y: hidden
 
     table
         border-spacing: 0
