--- a/resources/css/utils.sass
+++ b/resources/css/utils.sass
@@ -78,6 +78,12 @@
     .min-w-#{$i}
         min-width: #{$i}rem
 
+    .max-h-#{$i}
+        max-height: #{$i}rem
+
+    .max-w-#{$i}
+        max-width: #{$i}rem
+
 .h-100
     height: 100%
 
