Add MFA filter Change MFA setup screen Fix Web Header component

--- a/resources/css/utils.sass
+++ b/resources/css/utils.sass
@@ -26,6 +26,9 @@
     &.v-center
         align-items: center
 
+    &.v-stretch
+        align-items: stretch
+
     &.v-end
         align-items: flex-end
 
@@ -34,6 +37,9 @@
 
     &.h-center
         justify-content: center
+
+    &.h-stretch
+        justify-content: stretch
 
     &.h-end
         justify-content: flex-end
@@ -228,6 +234,17 @@
     aspect-ratio: 1/1
     object-fit: cover
     object-position: center
+
+
+
+.aspect-ratio-16-9
+    aspect-ratio: 16/9
+
+.aspect-ratio-4-3
+    aspect-ratio: 4/3
+
+.aspect-ratio-1
+    aspect-ratio: 1
 
 
 
