Add Messeanmeldung for distributors

--- a/resources/css/fonts/material-symbols-rounded.scss
+++ b/resources/css/fonts/material-symbols-rounded.scss
@@ -1,5 +1,6 @@
 @font-face {
-    src: url("/fonts/material-symbols-rounded/MaterialSymbolsRounded.woff2") format("woff2");
+    // src: url("/fonts/material-symbols-rounded/MaterialSymbolsRounded.woff2") format("woff2");
+    src: url("/fonts/material-symbols-rounded/material-symbols-rounded-filled-300.woff2") format("woff");
     font-family: "Material Symbols Rounded";
     font-display: auto;
     font-style: normal;
