--- a/resources/css/app.sass
+++ b/resources/css/app.sass
@@ -176,6 +176,9 @@ h4
 h5
     font-size: 1.2rem
 
+h6
+    font-size: 1rem
+
 small
     font-size: 0.833rem
 
@@ -265,6 +268,13 @@ input[type="color"]
 
 .iod-container.iod-toggle .label
     flex: unset !important
+
+.iod-container.iod-toggle.with-flex .label
+    display: flex !important
+    flex: 1 !important
+
+.iod-container.iod-toggle.v-center .label
+    align-items: center !important
 
 
 
@@ -373,6 +383,9 @@ main
 
     h5
         font-size: 1.125rem
+
+    h6
+        font-size: 1rem
 
 @media only screen and (max-width: 500px)
     html
